fix: align cancel button properly

--- a/src/components/UploadFile/UploadFile.module.css
+++ b/src/components/UploadFile/UploadFile.module.css
@@ -20,6 +20,7 @@
     background: #FFFFFF;
     height: var(--upload-button-size);
     width: 100%;
+    flex-shrink: 0;
 }
 
 .upload-button__text {
@@ -39,7 +40,13 @@
 .upload-button__file--done { background: #d0f0c0; }
 .upload-button__file--error { background: #ff6f42; color: white; }
 
-.upload-button__close {
+.upload-button__row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.upload-button__row__close {
     background: var(--button-color-dark);
     color: white;
     border: none;
@@ -50,6 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
 }
 
 .upload-button__spinner {
